rdo/app/rdo_console/trunk/examples_of_tests/syntax_error/syntax_error.rlog
PMD (4): предупреждение: ѕреобразование 'real' в 'integer', возможна потер€ данных
PMD (4): предупреждение: ѕреобразование 'real' в 'integer', возможна потер€ данных
PMD (5): предупреждение: ѕреобразование 'real' в 'integer', возможна потер€ данных
PMD (5): предупреждение: ѕреобразование 'real' в 'integer', возможна потер€ данных
PMD (6): ошибка: ќжидаетс€ ключевое слово $End